--- a/minimap.html
+++ b/minimap.html
@@ -114,12 +114,12 @@ var myLayer = L.mapbox.featureLayer().addTo(map);
 
 var geoJson = [{
     type: 'Feature',
-    "geometry": { "type": "Point", "coordinates": [-6.395667, 53.983818]},
+    "geometry": { "type": "Point", "coordinates": [-97.77420043945312, 30.269594057800575]},
     "properties": {
-        'title': 'Molloy Media Archaeology',
-        'marker-color': '#FFFFFF',
-        'marker-symbol': 'circle',
-        'marker-size': 'large',
+        'title': 'Zilker Park',
+        'marker-color': '#008000',
+        'marker-symbol': 'marker-stroked',
+        'marker-size': 'medium',
 
         // Store the image url and caption in an array.
         'images': [
@@ -236,7 +236,7 @@ $('#map').on('click', '.popup .cycle a', function() {
 });
 
 <!-- SET THE MAP VIEW HERE -->
-map.setView([53.5, -7], 6);
+map.setView([-97.77420043945312, 30.269594057800575], 6);
 </script>
 
 
