--- a/minimap.html
+++ b/minimap.html
@@ -114,12 +114,13 @@ var myLayer = L.mapbox.featureLayer().addTo(map);
 
 var geoJson = [{
     type: 'Feature',
-    "geometry": { "type": "Point", "coordinates": [-97.77420043945312, 30.269594057800575]},
+    "geometry": { "type": "Point", "coordinates": [9.18731689453125, 45.46687287100197]},
     "properties": {
-        'title': 'Zilker Park',
-        'marker-color': '#008000',
-        'marker-symbol': 'marker-stroked',
+        'title': 'Milan',
+        'marker-color': '#201883',
+        'marker-symbol': 'harbor',
         'marker-size': 'medium',
+        "Article: A Look Into Milan, including pictures of Milan": "https://drive.google.com/open?id=1xmW7BGIvyWeX8mcTNePd6Hi9JMNPzDle"
 
         // Store the image url and caption in an array.
         'images': [
@@ -236,7 +237,7 @@ $('#map').on('click', '.popup .cycle a', function() {
 });
 
 <!-- SET THE MAP VIEW HERE -->
-map.setView([-97.77420043945312, 30.269594057800575], 6);
+map.setView([9.18731689453125, 45.46687287100197], 6);
 </script>
 
 
